--- a/site/public/stylesheets/style1.css
+++ b/site/public/stylesheets/style1.css
@@ -33,7 +33,9 @@ input[type="password"] {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-input[type="submit"] {
+input[type="submit"],
+.login>button {
+    /*  outline: none; */
     display: block;
     margin-top: 1em;
     padding: 5px 15px;
@@ -56,4 +58,12 @@ input[type="password"]:focus {
     display: block;
     margin-top: 0.5em;
     text-align: center
+}
+
+.login {
+    position: fixed;
+    /*  width: 50%;
+    height: 70%; */
+    left: 35%;
+    top: 25%
 }
