--- a/site/public/stylesheets/style1.css
+++ b/site/public/stylesheets/style1.css
@@ -1,6 +1,6 @@
 /* Styles go here */
 
-div+.login {
+.login {
     display: block;
     width: 200px;
     margin: 50px auto;
@@ -23,8 +23,8 @@ div+.login {
     margin-top: 0;
 }
 
-input[type="text"],
-input[type="password"] {
+.login>input[type="text"],
+.login>input[type="password"] {
     border-radius: 5px;
     width: 180px;
     border: 1px solid #ccc;
@@ -33,7 +33,7 @@ input[type="password"] {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-input[type="submit"],
+.login>input[type="submit"],
 .login>button {
     /*  outline: none; */
     display: block;
@@ -48,8 +48,15 @@ input[type="submit"],
     box-sizing: border-box;
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus {
+
+/* .login button {
+    min-width: none;
+    min-height: none;
+    width: 1px;
+} */
+
+.login>input[type="text"]:focus,
+.login>input[type="password"]:focus {
     box-shadow: 0 0 5px rgba(50, 200, 255, 0.5);
     outline: none;
 }
@@ -57,13 +64,15 @@ input[type="password"]:focus {
 .login>h3 {
     display: block;
     margin-top: 0.5em;
-    text-align: center
+    text-align: center;
 }
 
 .login {
+    background-color: azure;
     position: fixed;
     /*  width: 50%;
     height: 70%; */
     left: 35%;
-    top: 25%
+    top: 25%;
+    z-index: 100;
 }
