--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -36,6 +36,13 @@ button {
     cursor: pointer;
 }
 
+.my-flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
 .my-flex-containerH button {
     font-weight: bold;
     background-color: #15a32f;
@@ -65,4 +72,10 @@ button {
     box-shadow: 1px 2px 1px 1px #05240a;
     padding: 7px;
     border: none;
+}
+
+#lft {
+    min-width: 0;
+    transition-property: min-width;
+    transition-duration: 0.5s;
 }
