--- a/site/public/stylesheets/style1.css
+++ b/site/public/stylesheets/style1.css
@@ -23,8 +23,8 @@
     margin-top: 0;
 }
 
-.login>input[type="text"],
-.login>input[type="password"],
+input[type="text"],
+input[type="password"],
 .login>input[type="email"] {
     border-radius: 5px;
     width: 180px;
@@ -35,7 +35,9 @@
 }
 
 .login>input[type="submit"],
-.login>button {
+.login>button,
+#dellA>button,
+#updateA>button {
     /*  outline: none; */
     display: block;
     margin-top: 1em;
@@ -49,6 +51,10 @@
     box-sizing: border-box;
 }
 
+#updateA>input {
+    margin: 0.2em;
+}
+
 
 /* .login button {
     min-width: none;
@@ -56,8 +62,8 @@
     width: 1px;
 } */
 
-.login>input[type="text"]:focus,
-.login>input[type="password"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
     box-shadow: 0 0 5px rgba(50, 200, 255, 0.5);
     outline: none;
 }
